# WeatherWebReactFastAPI

./: .gitignore  Dockerfile  README.md  compose.locust.yaml  docker-compose.yaml  main.py  pyproject.toml  test_main.http
alembic/: env.py
alembic/versions/: 2025_04_14_2152-82f55828de78_init_migration.py  2025_05_09_1147-201133e31fb4_refactor_user_setting_move_from_users_.py  2025_06_09_1612-4469e97087b7_init_migration.py
api_v1/views/: __init__.py  location_controller.py  locations.py  locations_router.py  views_controller.py
app/: __init__.py  main.py
app/api_v1/views/: location_controller.py  (+1 more)
app/celery_tasks/: __init__.py  config.py  run_celery.py  tasks.py
app/logger/: __init__.py  logging_config.py  logging_handler.py
app/models/: __init__.py  base.py  current.py  daily.py  favorites.py  hourly.py  tables.py  users.py  usersettings.py  wishlist.py
app/schemas/: error_response_schemas.py  setting_schemas.py  user_schemas.py  weather_schemas.py
app/users/: __init__.py  crud.py  settings_controller.py  settings_router.py  user_controller.py  user_router.py
app/utils/: __init__.py  auth.py  db_engine.py  exception_handler.py  exeption_handler.py  limiter.py  retry.py  settings.py  utils.py
celery_tasks/: __init__.py  run_celery.py  tasks.py
grafana/: config.alloy  datasource.yaml  promtail_config.yaml
grafana/dashboards/: Log table-1747817193208.json  Logs _ App-1747741830747.json
locust/: config.py  http_max_loc_req.py  http_max_user_login_req.py
models/: __init__.py  accounts.py  base.py  current.py  daily.py  favorites.py  hourly.py  settings.py  tablenames.py  tables.py  users.db  users.py  usersettings.py  wishlist.py
prometheus/: Dockerfile  prometheus.yaml
schemas/: error_response_schemas.py  setting_schemas.py  user_schemas.py  weather_schemas.py
users/: __init__.py  crud.py  router.py  settings_controller.py  settings_router.py  user_controller.py  user_router.py  views.py
utils/: __init__.py  db_engine.py  schemas.py  setting_schemas.py  settings.py  user_schemas.py  utils.py  weather_schemas.py
(+1 files in other folders)
