[tool.poetry]
name = "weatherwebreactfastapi"
version = "0.1.0"
description = "weatherapp API"
authors = ["vitaly <vitaly.rybkin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pydentic = {extras = ["email-validator"], version = "^0.0.1.dev3"}
sqlalchemy = "^2.0.37"
bcrypt = "^4.2.1"
sqlalchemy-json = "^0.7.0"
pydantic-settings = "^2.7.1"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
